[package]
name = "ronion_proxy"
version = "0.1.0"
authors = ["Norbert Görke <norgor@gmail.com>", "Magnus Hektoen Steensland <mag.steensland@gmail.com>", "Tommy René Sætre <tommyrsaetre@gmail.com>"]
edition = "2021"

[dependencies]
shadowsocks = "1.14.0"
tokio = { version = "1.17.0", features = ["full"] }
core = { path = "../../core" }
ronion_index = { path = "../index" }